Fix z-index of sticker modal

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -7674,7 +7674,7 @@ button.module-image__border-overlay:focus {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 5;
+    z-index: 1;
   }
 
   &__container {
